<resources>
    <string name="app_name">Wagba</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>

    <!-- Authentication Strings -->

    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="signup_bottom_text">Already Have An Account?</string>
    <string name="login_bottom_text">Don\'t Have An Account?</string>
    <string name="prompt_sign_in">Sign In</string>
    <string name="prompt_sign_up">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_google_login">Sign in with Google</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Create Account</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_passwd">password</string>
    <string name="hint_mail">studentID@eng.asu.edu.eg</string>

    <!--End of Authentication Strings-->


    <!-- Profile Strings -->

    <string name="back_to_home">Back to Home</string>
    <string name="account_info">Account Info</string>

    <string name="prof_username_et">customer0</string>
    <string name="prof_phone_num_et">+2012000000</string>
    <string name="prof_mail_et">studentID@eng.asu.edu.eg</string>
    <string name="todo">TODO</string>

    <string name="prof_update_btn">UPDATE</string>

    <!-- End of Profile Strings -->

    <!-- Main Activity Strings -->

    <string name="profile_btn">Profile</string>
    <string name="orders_btn">Order History</string>
    <string name="cart_btn">Cart</string>
    <string name="logout_btn">Logout</string>

    <!-- End of Main Activity Strings -->

    <!-- Orders Activity Strings -->

    <string name="orders_title_txt">My Orders</string>

    <!-- End of Orders Activity Strings -->

    <!-- Main Cart Strings -->
    <string name="cart_title_txt">My Cart</string>

    <string name="cart_total_price_txt">Total Price: 100</string>
    <string name="cart_total_price">100</string>

    <string name="cart_delivery_fee_txt">Delivery Fee: 10EGP</string>
    <string name="cart_delivery_fee">10</string>

    <string name="cart_items_price_txt">Items Price: 90EGP</string>
    <string name="cart_items_price">90</string>

    <string name="cart_pay_txt">Order Now</string>
    <string name="cart_delivery_gate_txt">Delivery Gate</string>

    <string name="cart_delivery_time_txt">Delivery Period</string>

    <string name="cart_radio_btn_gate3">Gate 3</string>
    <string name="cart_radio_btn_gate4">Gate 4</string>

    <string name="cart_radio_btn_period1">12:00 PM</string>
    <string name="cart_radio_btn_period2">3:00 PM</string>
    <string name="cart_radio_btn_period3">test</string>
    <!-- End of Cart Activity Strings -->

    <!-- Track Order Activity Strings -->

    <string name="track_order_title_txt">Track Order</string>
    <string name="track_order_total_price_txt">Order total price: 100</string>
    <string name="track_order_delivery_gate_txt">Order delivering to gate: 3</string>
    <string name="track_order_delivery_period_txt">Order should be delivered by 12:00PM</string>
    <string name="track_order_delivery_gate">Gate 3</string>
    <string name="track_order_photo_content">track order image</string>

    <string name="track_order_details_title_txt">Order Details</string>
    <string name="track_delivery_guy_photo_content">Delivery Guy Profile Photo</string>

    <string name="track_order_delivery_guy_name">Wagba Dude</string>
    <string name="track_order_delivery_guy_side_txt">Wagba delivery is there for you</string>

    <string name="track_call_btn_photo_content">Call Button Photo</string>

    <!-- End of Track Order Activity Strings -->

    <!-- Restaurant Activity Strings -->
    <string name="restaurant_activity_title">Restaurant Menu</string>
    <string name="restaurant_bot_nav_text">go to cart</string>

    <!-- End of Restaurant Activity Strings -->



    <!-- Restaurant Card Strings -->
    <string name="restaurant_card_title_txt">Restaurant Name</string>
    <string name="restaurant_card_rating_txt">Restaurant Rating:</string>
    <string name="restaurant_card_image_txt">Restaurant Image</string>
    <string name="restaurant_card_address_txt">Restaurant Image</string>
    <!-- End of Restaurant Card Strings -->


    <!-- Dish Card Strings -->
    <string name="dish_card_title_txt">Dish Name</string>
    <string name="dish_card_price_txt">Price:</string>
    <string name="dish_card_price_unit_txt">EGP</string>
    <string name="dish_card_dish_price_txt">0.00</string>
    <string name="dish_card_dish_quantity_txt">0</string>
    <string name="dish_card_image_content">Dish Image</string>

    <!-- End of Dish Card Strings -->

</resources>