<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"

    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <ImageView
            android:id="@+id/dish_card_image"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/card_img_background"
            android:contentDescription="@string/dish_card_image_content"
            android:cropToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/dish_card_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_card_title_txt"
            android:textColor="@color/gray"
            android:textSize="16sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dish_card_price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dish_card_price_txt"

            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dish_card_title_txt" />

        <TextView
            android:id="@+id/dish_card_dish_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_card_dish_price_txt"
            android:textColor="@color/light_gray"
            app:layout_constraintStart_toEndOf="@+id/dish_card_price_txt"

            app:layout_constraintTop_toTopOf="@+id/dish_card_price_txt"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/dish_card_dish_price_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_card_price_unit_txt"
            android:textColor="@color/light_gray"
            app:layout_constraintStart_toEndOf="@+id/dish_card_dish_price"

            app:layout_constraintTop_toTopOf="@+id/dish_card_dish_price"
            tools:ignore="TextContrastCheck" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/dish_increment_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/quantity_buttons"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dish_card_image"
            app:srcCompat="@drawable/increment_button_photo"

            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/dish_decrement_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/quantity_buttons"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/decrement_button_photo"

            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/dish_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/dish_card_dish_quantity_txt"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dish_increment_btn"

            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toEndOf="@+id/dish_decrement_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>